apps/java-guide/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-guide
  namespace: java-guide
spec:
  selector:
    app: java-guide
  ports:
  - port: 80
    targetPort: 8080
