apps/java-guide/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-guide
  namespace: java-guide
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  rules:
  - host: java.ionize13.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-guide
            port:
              number: 80
